Replace GPL-derived runtime with documented BSD implementation